--- a/public/main.css
+++ b/public/main.css
@@ -7740,7 +7740,8 @@ nav {
   flex-shrink: 1;
   min-height: calc(100vh - 50px) !important;
   display: flex;
-  width: 100%; }
+  width: 100%;
+  margin-bottom: 50px; }
 
 .clickable,
 [clickable] {
