--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -102,6 +102,7 @@ nav {
 	min-height: calc(100vh - 50px) !important;
 	display: flex;
 	width: 100%;
+	margin-bottom: 50px;
 	// background-color: var(--color-bg);
 	// background-color: red !important;
 }
