--- a/public/main.css
+++ b/public/main.css
@@ -5110,14 +5110,16 @@ button:focus {
     min-width: 140px;
     font-size: 2.5rem; }
 
-.btn.btn-text {
+.btn-text {
   color: var(--color-primary-bright);
   background-color: transparent;
   box-shadow: none;
   text-transform: uppercase;
   font-weight: 700;
-  letter-spacing: 0.06rem; }
-  .btn.btn-text:active {
+  letter-spacing: 0.06rem;
+  font-size: 0.8rem;
+  border-radius: 8px; }
+  .btn-text:active {
     background-color: transparent !important;
     color: var(--color-primary-bright);
     opacity: 0.86; }
@@ -5445,7 +5447,7 @@ body.theme-dark {
   --color-background-selected: rgba($primaryBright, 0.82);
   --box-shadow: 0px -2px 2px rgba(255, 255, 255, 0.06), 0px 8px 10px rgba(0, 0, 0, 0.3);
   --box-shadow-tight: 0px -2px 2px rgba(255, 255, 255, 0.06), 0px 4px 6px -1px rgba(0, 0, 0, 0.4);
-  --box-shadow-float: 0px -2px 2px rgba(255, 255, 255, 0.06), 0px 6px 10px -1px rgba(0, 0, 0, 0.1);
+  --box-shadow-float: 0px -2px 2px rgba(255, 255, 255, 0.09), 0px 6px 10px -1px rgba(0, 0, 0, 0.1), 0px 0px 2px rgba(255, 255, 255, 0.1);
   --box-shadow-neu: 4px 4px 8px rgba(255, 255, 255, 0.1), -4px -4px 8px rgba(0, 0, 0, 0.3);
   --box-shadow-neu-tight: 2px 2px 4px rgba(255, 255, 255, 0.1), -2px -2px 4px rgba(0, 0, 0, 0.3);
   --box-shadow-inset-huge: inset 0px 0px 60px rgba(0, 0, 0, 0.6);
@@ -6394,7 +6396,6 @@ body.scrolling .mini-map {
   .n-item .left,
   .n-item .right {
     color: var(--color-inverse-2);
-    font-size: 0.9rem;
     flex-shrink: 0;
     flex-grow: 0; }
   .n-item .right .btn-clear {
@@ -6431,10 +6432,6 @@ body.scrolling .mini-map {
     margin: 6px 0; }
   .n-item .right .zmdi {
     font-size: 26px; }
-  .n-item .right .btn,
-  .n-item .right a,
-  .n-item .right span {
-    font-size: 0.9rem; }
   .n-item .right select {
     text-align: right; }
   .n-item .right .form-control {
