--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -182,7 +182,7 @@ body.test {
   --color-background-selected: rgba($primaryBright, 0.82);
   --box-shadow: 0px -2px 2px rgba(255, 255, 255, 0.06), 0px 8px 10px rgba(0, 0, 0, 0.3);
   --box-shadow-tight: 0px -2px 2px rgba(255, 255, 255, 0.06), 0px 4px 6px -1px rgba(0, 0, 0, 0.4);
-  --box-shadow-float: 0px -2px 2px rgba(255, 255, 255, 0.06), 0px 6px 10px -1px rgba(0, 0, 0, 0.1);
+  --box-shadow-float: 0px -2px 2px rgba(255, 255, 255, 0.09), 0px 6px 10px -1px rgba(0, 0, 0, 0.1), 0px 0px 2px rgba(255, 255, 255, 0.1);
 
   --box-shadow-neu: 4px 4px 8px rgba(255, 255, 255, 0.1), -4px -4px 8px rgba(0, 0, 0, 0.3);
   --box-shadow-neu-tight: 2px 2px 4px rgba(255, 255, 255, 0.1), -2px -2px 4px rgba(0, 0, 0, 0.3);
