--- a/src/scss/components/_list-item.scss
+++ b/src/scss/components/_list-item.scss
@@ -202,7 +202,7 @@
   .left,
   .right {
     color: var(--color-inverse-2);
-    font-size: 0.9rem;
+    // font-size: 0.9rem;
     flex-shrink: 0;
     flex-grow: 0;
   }
@@ -271,7 +271,7 @@
     .btn,
     a,
     span {
-      font-size: 0.9rem;
+      // font-size: 0.9rem;
     }
     select {
       // min-width: 190px;
